/*
 * $Id: ChangeLog,v 1.2005 2004/01/06 21:29:11 paultucker Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2004-01-07 10:42 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * doc/en/var.txt
    + Documentation for: __MVSYMBOLINFO()

2004-01-06 16:28 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * tests/sound.prg
    + comments

2004-01-07 10:15 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * source/rtl/persist.prg
   + ReplaceBracketsInString() to handle strings where all 3 delimiters are present
   * Optimised code for previous changes made
  * source/vm/memvars.c
   + HB_FUNC( __MVSYMBOLINFO ) returns array of array of {"SymbolName", xValue}
  * source/rtl/tget.prg
   + METHOD Undo() CLASS Get - Fix to work correctly

2004-01-06 16:15 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * bin/bld.bat
    * msvc support for gtwvt

2004-01-07 02:34 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/compiler/hbusage.c
    * replace year 2003 with 2004
  * source/rtl/gtwvt/gtwvt.c
    * fixes for MSVC compilation

2004-01-06 15:00 utc+0530 Pritpal Bedi <pritpal@vouchcac.com>
  * xharbour/source/rtl/gtwvt/gtwvt.c
    + Wvt_GetFontInfo()
      Returns the current font name,height,width,weight,quality.
    + GUI primitive functions:
      + Wvt_DrawBoxGet( nRow, nCol, nWidth )
      + Wvt_DrawBoxRaised( nTop, nLeft, nBottom, nRight )
      + Wvt_DrawBoxRecessed( nTop, nLeft, nBottom, nRight )
      + Wvt_DrawBoxGroup( nTop, nLeft, nBottom, nRight )
      + Wvt_DrawImage( nTop, nLefy, nBottom, nRight, cAnyGraphicFileName )
      + Wvt_DrawLabel( nRow, nCol, cLabel, nAlign, nAngle, cTextColor, cBackColor, ;
                       cFontFace, nFontHeight, nFontWidth, nFontWeight, nFontQuality, ;
                       nCharSet, lItalic, lUnderline, lStrikeout )
   + xharbour/tests/wvtgui.prg
   + xharbour/tests/bldwvt.bat